feat: Add PDF contract parsing for client setup
Introduces a new service `contractParser.ts` to extract client name, recurring fee, one-time setup fee, and contract start date from uploaded PDF contracts.

This enables the automatic population of client settings, streamlining the initial setup process for new clients. The UI in `Settings.tsx` is updated to include a file upload input for PDFs and to display parsing results. Dependencies for `pdfjs-dist` are added to `index.html`.

The `ClientConfig` type in `types.ts` is extended to include `oneTimeFee` and `contractStartDate` to store this parsed information. The `dataProcessor.ts` is updated to consider the `oneTimeFee` in client summaries.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     "recharts": "https://aistudiocdn.com/recharts@^3.5.1",
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0"
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
+    "pdfjs-dist": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.0.379/+esm",
+    "pdfjs-dist/build/pdf.worker.mjs": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.0.379/build/pdf.worker.mjs"
   }
 }
 </script>
