feat: Add PDF parsing capabilities
Integrates `pdfjs-dist` library to enable parsing of PDF files, likely for future features related to processing PDF-based timesheet exports.

--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     "vite": "https://aistudiocdn.com/vite@^7.2.7",
     "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.2",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.87.0",
-    "pdfjs-dist": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.0.379/+esm",
-    "pdfjs-dist/build/pdf.worker.mjs": "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.0.379/build/pdf.worker.mjs"
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.624"
   }
 }
 </script>
